# ipa_coverage_planning

./: .gitignore  .travis.rosinstall.melodic  .travis.yml  README.md
ipa_building_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ipa_building_msgs/action/: FindRoomSequenceWithCheckpoints.action  MapSegmentation.action  RoomExploration.action
ipa_building_msgs/msg/: RoomInformation.msg  RoomSequence.msg
ipa_building_msgs/srv/: CheckCoverage.srv  ExtractAreaMapFromLabeledMap.srv  checkCoverage.srv
ipa_building_navigation/: CMakeLists.txt  package.xml  readme.md
ipa_building_navigation/action/: FindRoomSequenceWithCheckpoints.action
ipa_building_navigation/cfg/: BuildingNavigation.cfg
ipa_building_navigation/common/include/ipa_building_navigation/: A_star_pathplanner.h  concorde_TSP.h  contains.h  distance_matrix.h  genetic_TSP.h  maximal_clique_finder.h  nearest_neighbor_TSP.h  node.h  set_cover_solver.h  timer.h  trolley_position_finder.h  tsp_solver_defines.h  tsp_solvers.h
ipa_building_navigation/common/src/: A_star_pathplanner.cpp  concorde_TSP.cpp  contains.cpp  genetic_TSP.cpp  maximal_clique_finder.cpp  nearest_neighbor_TSP.cpp  node.cpp  set_cover_solver.cpp  trolley_position_finder.cpp
ipa_building_navigation/ros/include/ipa_building_navigation/: dynamic_reconfigure_client.h  room_sequence_planning_action_server.h
ipa_building_navigation/ros/launch/: room_sequence_planning_action_server.launch  room_sequence_planning_action_server_params.yaml  room_sequence_planning_evaluation.launch
ipa_building_navigation/ros/src/: boosttest.cpp  room_sequence_planning_action_client.cpp  room_sequence_planning_action_server.cpp  room_sequence_planning_evaluation.cpp  tester.cpp
ipa_building_navigation/ros/test/: room_sequence_planning_action_client.launch
ipa_coverage_planning/: CMakeLists.txt  package.xml
ipa_room_exploration/: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md
ipa_room_exploration/action/: RoomExploration.action
ipa_room_exploration/cfg/: CoverageMonitor.cfg  RoomExploration.cfg
ipa_room_exploration/cmake/: FindGUROBI.cmake
ipa_room_exploration/common/include/ipa_room_exploration/: A_star_pathplanner.h  boustrophedon_explorator.h  concorde_TSP.h  convex_sensor_placement_explorator.h  distance_matrix.h  energy_functional_explorator.h  fast_math.h  flow_network_explorator.h  fow_to_robot_mapper.h  grid.h  grid_point_explorator.h  histogram.h  meanshift2d.h  nearest_neighbor_TSP.h  neural_network_explorator.h  neuron_class.h  room_rotator.h  timer.h  voronoi.hpp
ipa_room_exploration/common/src/: A_star_pathplanner.cpp  boustrophedon_explorator.cpp  boustrophedon_explorator.cpp.autosave  concorde_TSP.cpp  contains.cpp  convex_sensor_placement_explorator.cpp  energy_functional_explorator.cpp  flow_network_explorator.cpp  fow_to_robot_mapper.cpp  grid_point_explorator.cpp  meanshift2d.cpp  nearest_neighbor_TSP.cpp  neural_network_explorator.cpp  neuron_class.cpp  node.cpp  room_rotator.cpp
ipa_room_exploration/ros/include/ipa_room_exploration/: coverage_check_server.h  dynamic_reconfigure_client.h  fov_to_robot_mapper.h  fow_to_robot_mapper.h  room_exploration_action_server.h
ipa_room_exploration/ros/launch/: cob_map_accessibility_analysis.launch  cob_map_accessibility_analysis_params.yaml  coverage_check_server.launch  coverage_monitor_server.launch  coverage_monitor_server_params.yaml  room_exploration_action_server.launch  room_exploration_action_server_params.yaml
ipa_room_exploration/ros/src/: coverage_check_server.cpp  coverage_check_server_main.cpp  coverage_monitor_server.cpp  fov_to_robot_mapper.cpp  fow_to_robot_mapper.cpp  global_plan_provider.py  room_exploration_action_client.cpp  room_exploration_action_server.cpp  room_exploration_evaluation.cpp
ipa_room_exploration/ros/test/: room_exploration_client.launch  room_exploration_evaluation.launch
ipa_room_segmentation/: CMakeLists.txt  Readme.txt  package.xml  readme.md
ipa_room_segmentation/action/: MapSegmentation.action
ipa_room_segmentation/cfg/: RoomSegmentation.cfg
ipa_room_segmentation/common/files/classifier_models/: semantic_hallway_boost.xml  semantic_room_boost.xml  vrf_conditional_field_weights.txt  vrf_doorway_boost.xml  vrf_hallway_boost.xml  vrf_room_boost.xml
ipa_room_segmentation/common/files/test_maps/: map.pgm  quellen.txt
ipa_room_segmentation/common/files/training_results/: conditional_field_weights.txt  trained_hallway_boost.xml  trained_room_boost.xml  voronoi_doorway_boost.xml  voronoi_hallway_boost.xml  voronoi_room_boost.xml
ipa_room_segmentation/common/include/ipa_room_segmentation/: adaboost_classifier.h  (+18 more)
ipa_room_segmentation/common/src/: abstract_voronoi_segmentation.cpp  adaboost_classifier.cpp  clique_class.cpp  contains.cpp  cv_boost_loader.cpp  distance_segmentation.cpp  evaluation_segmentation.cpp  features.cpp  meanshift2d.cpp  morphological_segmentation.cpp  raycasting.cpp  room_class.cpp  segmentation_tester.cpp  voronoi_random_field_features.cpp  voronoi_random_field_segmentation.cpp  voronoi_segmentation.cpp  watershed_region_spreading.cpp  wavefront_region_growing.cpp
ipa_room_segmentation/msg/: RoomInformation.msg
ipa_room_segmentation/ros/launch/: room_segmentation_action_client.launch  room_segmentation_action_server.launch  room_segmentation_action_server_params.yaml  room_segmentation_evaluation.launch
ipa_room_segmentation/ros/src/: action_client_tester.cpp  client.cpp  distance_segmentation.cpp  distance_segmentation_server.cpp  evaluation.cpp  evaluation_numeric_properties.cpp  map_segmentation_action_server_new.cpp  map_segmentation_action_server_old.cpp  morphological_segmentation_server.cpp  opencvboost.cpp  room_segmentation_client.cpp  room_segmentation_server.cpp  semantic_labeling.cpp  semantic_segmentation_server.cpp  testsegmentation.cpp  vornoi_segmentation.cpp  voronoi_segmentation.cpp  voronoi_segmentation_server.cpp  weak_classifier.cpp
ipa_room_segmentation/srv/: seg.srv
ipa_room_segmentation/training_results/: trained_hallway_boost.xml  trained_room_SVM.xml  trained_room_boost.xml
(+6 files in other folders)
