<?xml version="1.0"?>
<package format="2">
	<name>ipa_room_exploration</name>
	<version>0.1.0</version>
	<description>
		This package plans the navigation in a room such that the floor of this room gets inspected completely for dirt.
	</description>
	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/ipa_room_exploration</url>

	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>cmake_modules</depend>
	<depend>cv_bridge</depend>
	<depend>libopencv-dev</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>concorde_tsp_solver</depend>
	<depend>actionlib</depend>
	<depend>actionlib_msgs</depend>
	<depend>tf</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>move_base_msgs</depend>
	<depend>message_generation</depend>
	<depend>genmsg</depend>
	<depend>boost</depend>
	<depend>ipa_building_navigation</depend>

	<exec_depend>message_runtime</exec_depend>

</package>
